# rseL4

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/hal/: Cargo.toml
crates/hal/src/: lib.rs  macros.rs
crates/hal/src/aarch64/: mod.rs
crates/sel4-types/: Cargo.toml  structures.bf
docs/: AddrTypeDesign.md  BootStage.md  cap.md
example/: Makefile
example/src/: main.rs
kernel/: Cargo.toml  build.rs  linker.lds  linker.lds.liquid
kernel/src/: boot.rs  console.rs  lang_items.rs  lib.rs  main.rs  state_data.rs
kernel/src/arch/: addr.rs  generic.rs  irq.rs  mod.rs
kernel/src/arch/aarch64/: boot.rs  consts.rs  cpu.rs  gic.rs  macros.rs  mem.rs  mod.rs  objects.rs  trap.S  traps.rs  vspace.rs
kernel/src/boot/: boot_lock.rs  consts.rs  mod.rs  root_server.rs
kernel/src/config/: mod.rs
kernel/src/driver/: aarch_timer.rs  gicv2.rs  mod.rs  pl011.rs  psci.rs
kernel/src/mem/: mod.rs
kernel/src/object/: boot_info.rs  cap.rs  cspace.rs  fault.rs  ipc.rs  mod.rs  tcb.rs
kernel/src/platform/: aarch64_qemu.rs  mod.rs
tools/: generator.py  grammar.lark  parser.py
tools/aarch64/: structures.bf
tools/templates/: block.rs.j2  tag_union.rs.j2
