[package]
name = "rsel4"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = { version = "0.10.0", features = ["mutex"] }
log = "0.4"
hal = { workspace = true }
bitflags = "2.9.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0.0"
arm_pl011 = "0.1.0"
arm_gicv2 = "0.1.0"
